--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,47 @@
 version: '3.8'
 
 services:
+
+  kafka:
+    image: confluentinc/cp-kafka:latest
+    container_name: kafka
+    ports:
+      - "9092:9092"
+      - "9093:9093"
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_PROCESS_ROLES: "broker,controller"
+      KAFKA_NODE_ID: 1
+      KAFKA_CONTROLLER_QUORUM_VOTERS: "1@kafka:9093"
+      KAFKA_LISTENERS: "PLAINTEXT://:9092,CONTROLLER://:9093"
+      KAFKA_ADVERTISED_LISTENERS: "PLAINTEXT://192.168.3.134:9092"
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: "CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT"
+      KAFKA_INTER_BROKER_LISTENER_NAME: "PLAINTEXT"
+      KAFKA_CONTROLLER_LISTENER_NAMES: "CONTROLLER"
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+      KAFKA_LOG_DIRS: "/var/lib/kafka/data"
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
+    volumes:
+      - kafka_data:/var/lib/kafka/data
+    networks:
+      - fast-parser-network
+
+  kafka-ui:
+    container_name: kafka-ui
+    image: provectuslabs/kafka-ui:latest
+    ports:
+      - 8080:8080
+    environment:
+      DYNAMIC_CONFIG_ENABLED: true
+      # Добавляем необходимые переменные для Kafka UI
+      BOOTSTRAP_SERVERS: 192.168.3.134:9092
+    networks:
+      - fast-parser-network
+    depends_on:
+      - kafka
+
   minio:
     image: minio/minio
     container_name: minio
@@ -21,33 +62,6 @@ services:
     networks:
       - fast-parser-network
 
-  # kafka:
-  #   image: confluentinc/cp-kafka:latest
-  #   container_name: kafka
-  #   ports:
-  #     - "9092:9092"
-  #   environment:
-  #     KAFKA_BROKER_ID: 1
-  #     KAFKA_PROCESS_ROLES: "broker,controller"
-  #     KAFKA_NODE_ID: 1
-  #     KAFKA_CONTROLLER_QUORUM_VOTERS: "1@kafka:9093"
-  #     KAFKA_LISTENERS: "PLAINTEXT://:9092,CONTROLLER://:9093"
-  #     KAFKA_ADVERTISED_LISTENERS: "PLAINTEXT://localhost:9092"
-  #     KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: "CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT"
-  #     KAFKA_INTER_BROKER_LISTENER_NAME: "PLAINTEXT"
-  #     KAFKA_CONTROLLER_LISTENER_NAMES: "CONTROLLER"
-  #     KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-  #     KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
-  #     KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
-  #     KAFKA_LOG_DIRS: "/var/lib/kafka/data"
-  #     KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
-  #   volumes:
-  #     - kafka_data:/var/lib/kafka/data
-  #   networks:
-  #     - fast-parser-network
-  #   depends_on:
-  #     - minio
-
   # parsing_module:
   #   container_name: parsing-module
   #   build:
@@ -58,6 +72,9 @@ services:
   #     MINIO_ACCESS_KEY: "minioadmin"
   #     MINIO_SECRET_KEY: "minioadmin"
   #     MINIO_BUCKET: "users"
+  #     KAFKA_BOOTSTRAP: "kafka:9092"
+  #     KAFKA_CONSUMER_GROUP: "parser"
+  #     KAFKA_INPUT_TOPIC: "INPUT"
   #   restart: unless-stopped
   #   deploy:
   #     resources:
@@ -74,6 +91,7 @@ services:
   #     - fast-parser-network
   #   depends_on:
   #     - minio
+  #     - kafka
 
 volumes:
   minio_data:
