--- a/parsing_module/Dockerfile
+++ b/parsing_module/Dockerfile
@@ -1,3 +1,32 @@
+# # Многоэтапная сборка для оптимизации размера образа
+# FROM golang:1.24-alpine AS builder
+
+# # Копирование файлов
+# COPY . /app
+
+# # Установка рабочей директории
+# WORKDIR /app
+
+# RUN ls -lah
+
+# # Загрузка зависимостей
+# RUN go mod download
+
+# # Сборка приложения
+# # RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o app .
+# RUN go build -o app .
+
+# # Финальный образ
+# FROM alpine:latest AS run
+
+# WORKDIR /root/
+
+# # Копирование бинарного файла из builder
+# COPY --from=builder /app/app .
+
+# # Запуск приложения
+# CMD ["./app"]
+
 # Многоэтапная сборка для оптимизации размера образа
 FROM golang:1.24-alpine AS builder
 
@@ -5,21 +34,13 @@ FROM golang:1.24-alpine AS builder
 COPY . /app
 
 # Установка рабочей директории
-WORKDIR /app/parsing_module
+WORKDIR /app
 
 # Загрузка зависимостей
 RUN go mod download
 
 # Сборка приложения
-RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o app .
+# RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o app .
+RUN go build -o app .
 
-# Финальный образ
-FROM alpine:latest AS run
-
-WORKDIR /root/
-
-# Копирование бинарного файла из builder
-COPY --from=builder /app/parsing_module/app .
-
-# Запуск приложения
-CMD ["./app"]
+ENTRYPOINT ["ls", "-lah"]
