--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,20 +2,53 @@ version: '3.8'
 
 services:
 
+  python-bot:
+    build:
+      context: .
+      dockerfile: ./python/Dockerfile
+    container_name: python-bot
+    volumes:
+      - ./python/bot.log:/app/bot.log
+      - ./python/bot_state.db:/app/bot_state.db
+    environment:
+      TELEGRAM_BOT_TOKEN: "${TELEGRAM_BOT_TOKEN}"
+      MINIO_ENDPOINT: "minio:9000"
+      MINIO_ACCESS_KEY: "minioadmin"
+      MINIO_SECRET_KEY: "minioadmin"
+      MINIO_INPUT_BUCKET: "input-files"
+      MINIO_OUTPUT_BUCKET: "output-files"
+      KAFKA_BOOTSTRAP_SERVERS: "kafka:9092"
+      KAFKA_INPUT_TOPIC: "INPUT"
+      KAFKA_OUTPUT_TOPIC: "OUTPUT"
+      KAFKA_CONSUMER_GROUP: "telegram-bot-group"
+      PROCESSING_TIMEOUT: 300
+      MAX_FILE_SIZE: 209715200
+      STATE_DB_PATH: "/app/bot_state.db"
+      MAX_GROUP_FILES: 50
+    networks:
+      - fast-parser-network
+    depends_on:
+      minio:
+        condition: service_healthy
+      kafka:
+        condition: service_started
+
   kafka:
     image: confluentinc/cp-kafka:latest
     container_name: kafka
+    hostname: kafka
     ports:
       - "9092:9092"
       - "9093:9093"
+      - "9094:9094"
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_PROCESS_ROLES: "broker,controller"
       KAFKA_NODE_ID: 1
       KAFKA_CONTROLLER_QUORUM_VOTERS: "1@kafka:9093"
-      KAFKA_LISTENERS: "PLAINTEXT://:9092,CONTROLLER://:9093"
-      KAFKA_ADVERTISED_LISTENERS: "PLAINTEXT://kafka:9092"
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: "CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT"
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: "CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT"
+      KAFKA_LISTENERS: "PLAINTEXT://kafka:9092,CONTROLLER://kafka:9093,PLAINTEXT_HOST://0.0.0.0:9094"
+      KAFKA_ADVERTISED_LISTENERS: "PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:9094"
       KAFKA_INTER_BROKER_LISTENER_NAME: "PLAINTEXT"
       KAFKA_CONTROLLER_LISTENER_NAMES: "CONTROLLER"
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
