--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ async-timeout==5.0.1
 attrs==25.4.0
 certifi==2025.11.12
 cffi==2.0.0
+charset-normalizer==3.4.4
 confluent-kafka==2.12.2
 frozenlist==1.8.0
 idna==3.11
@@ -18,13 +19,20 @@ kafka-python==2.3.0
 magic-filter==1.0.12
 minio==7.2.20
 multidict==6.7.0
+numpy==2.0.2
+pandas==2.3.3
 propcache==0.4.1
 pycparser==2.23
 pycryptodome==3.23.0
 pydantic==2.11.10
 pydantic_core==2.33.2
+python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
+pytz==2025.2
+requests==2.32.5
+six==1.17.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
+tzdata==2025.3
 urllib3==2.6.0
 yarl==1.22.0
